[package]
name = "ji"
version = "1.0.0"
authors = ["Keir Lawson <keirlawson@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.7"
envy = "0.4"
anyhow = "1.0"
url = { version = "2", features = ["serde"] }
structopt = "0.3"