[package]
name = "ji"
version = "1.1.0"
authors = ["Keir Lawson <keirlawson@gmail.com>"]
description = "Simple CLI for getting the key for a selected JIRA issue"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
anyhow = "1.0"
url = { version = "2", features = ["serde"] }
structopt = "0.3"
env_logger = "0.11.0"
