[package]
name = "ji"
version = "1.1.11"
authors = ["Keir Lawson <keirlawson@gmail.com>"]
description = "Simple CLI for getting the key for a selected JIRA issue"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
anyhow = "1.0"
url = { version = "2", features = ["serde"] }
structopt = "0.3"
env_logger = "0.11"
fuzzy-select = "0.1.2"

[profile.release]
# per https://kobzol.github.io/rust/cargo/2024/01/23/making-rust-binaries-smaller-by-default.html
strip = "debuginfo"
